--- a/client/src/styles/settings.scss
+++ b/client/src/styles/settings.scss
@@ -2,7 +2,7 @@ $main-nav-height : 3em;
 
 $comment-footer-height: 70px;
 
-$post-view-box-height: 800px;
+$post-view-box-height: 840px;
 $post-view-box-width: 700px;
 $post-view-header-height: 70px;
 $post-view-footer-height: 70px;
